service.yaml
kind: Service
apiVersion: v1
metadata:
  name: example
  namespace: deniz
spec:
  selector:
    name: example
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5080
 # type: LoadBalancer
