Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: example
  namespace: deniz
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 0m
    #nginx.ingress.kubernetes.io/rewrite-target: $2
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-send-timeout: '200'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '200'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '200'
     
spec:
  tls:
    - hosts:
        - web.example.com
  rules:
    - host: web.example.com
      http:
        paths:
          - path: "/(/|$)(.*)"
            backend:
              serviceName: example
              servicePort: 5080
